--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 					
 					<div class="col-md-6">
 						<div class="about-desc">
-							<div class="about-desc-content text-left">
+							<div class="ml-3 about-desc-content text-left">
 								<h2>※名前</h2>
 								<p class="mt-4 font-weight-light">※自己紹介</p>
 							</div>
