modify works layout

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section class="section-home" id="home">
       <video class="top-video" src="assets/images/nc219945.mp4" autoplay playsinline muted loop></video>
       <div class="overlay">
-        <div class="top-contents" style="padding-top: 16%;">
+        <div class="top-contents">
           <h2 class="mb-2 font-weight-bold text-white animated fadeInDown wow">※カッコいいキャッチ</h2>
           <p class="display-2 animated fadeInDown wow font-weight-bold text-white" style="font-family: 'Poppins';">GAS _ STUDIO</p>
           <p class="pl-2 mt-5 animated fadeInDown wow text-white">※宣伝文</p>
@@ -303,7 +303,7 @@
 				<div class="list-items-container row my-gallery">
 
           <div class="portfolio-item-1 col-sm-6 col-md-4 list-item mb-4 mb-md-5" itemprop="associatedMedia" data-groups="all slideshow">
-            <div type="button" data-toggle="modal" data-target="#portfolio-item-1">
+            <div data-toggle="modal" data-target="#portfolio-item-1">
               <img src="assets/images/p4-4.jpg" itemprop="thumbnail" alt="Image description"/>
               <h4 class="portfolio-item-title mt-3 mb-2">※タイトル</h4>
             </div>
@@ -326,7 +326,7 @@
           </div><!-- /.modal -->
 
           <div class="portfolio-item-2 col-sm-6 col-md-4 list-item mb-4 mb-md-5" itemprop="associatedMedia" data-groups="all slideshow">
-            <div type="button" data-toggle="modal" data-target="#portfolio-item-2">
+            <div data-toggle="modal" data-target="#portfolio-item-2">
               <img src="assets/images/p4-4.jpg" itemprop="thumbnail" alt="Image description"/>
               <h4 class="portfolio-item-title mt-3 mb-2">※タイトル</h4>
             </div>
@@ -347,7 +347,7 @@
           </div><!-- /.modal -->
 
           <div class="portfolio-item-3 col-sm-6 col-md-4 list-item mb-4 mb-md-5" itemprop="associatedMedia" data-groups="all video">
-            <div type="button" data-toggle="modal" data-target="#portfolio-item-3">
+            <div data-toggle="modal" data-target="#portfolio-item-3">
               <img src="assets/images/p4-4.jpg" itemprop="thumbnail" alt="Image description"/>
               <h4 class="portfolio-item-title mt-3 mb-2">※タイトル</h4>
             </div>
@@ -368,7 +368,7 @@
           </div><!-- /.modal -->
 
           <div class="portfolio-item-4 col-sm-6 col-md-4 list-item mb-4 mb-md-5" itemprop="associatedMedia" data-groups="all image">
-            <div type="button" data-toggle="modal" data-target="#portfolio-item-4">
+            <div data-toggle="modal" data-target="#portfolio-item-4">
               <img src="assets/images/p4-4.jpg" itemprop="thumbnail" alt="Image description"/>
               <h4 class="portfolio-item-title mt-3 mb-2">※タイトル</h4>
             </div>
@@ -389,7 +389,7 @@
           </div><!-- /.modal -->
 
           <div class="portfolio-item-5 col-sm-6 col-md-4 list-item mb-4 mb-md-5" itemprop="associatedMedia" data-groups="all video">
-            <div type="button" data-toggle="modal" data-target="#portfolio-item-5">
+            <div data-toggle="modal" data-target="#portfolio-item-5">
               <img src="assets/images/p4-4.jpg" itemprop="thumbnail" alt="Image description"/>
               <h4 class="portfolio-item-title mt-3 mb-2">※タイトル</h4>
             </div>
@@ -410,7 +410,7 @@
           </div><!-- /.modal -->
 
           <div class="portfolio-item-6 col-sm-6 col-md-4 list-item mb-4 mb-md-5" itemprop="associatedMedia" data-groups="all slideshow">
-            <div type="button" data-toggle="modal" data-target="#portfolio-item-6">
+            <div data-toggle="modal" data-target="#portfolio-item-6">
               <img src="assets/images/p4-4.jpg" itemprop="thumbnail" alt="Image description"/>
               <h4 class="portfolio-item-title mt-3 mb-2">※タイトル</h4>
             </div>
