modify layout, php file

--- a/index.html
+++ b/index.html
@@ -74,16 +74,13 @@
     <!-- START: HOME -->
     <section class="section-home" id="home">
       <video class="top-video" src="assets/images/nc219945.mp4" autoplay playsinline muted loop></video>
-      <div class="overlay">
+      <div class="overlay text-center">
         <div class="top-contents">
-          <h2 class="mb-2 font-weight-bold text-white animated fadeInDown wow">※カッコいいキャッチ</h2>
-          <p class="display-2 animated fadeInDown wow font-weight-bold text-white" style="font-family: 'Poppins';">GAS _
-            STUDIO</p>
-          <p class="pl-2 mt-5 animated fadeInDown wow text-white">※宣伝文</p>
-        </div>
-        <div class="text-center d-flex justify-content-center align-content-center">
+          <p class="font-weight-bold text-white animated fadeInDown wow"><span style="font-size: 2.5vw;">差のつく映像制作</span></p>
+          <p class="mt-1 display-2 animated fadeInDown wow font-weight-bold text-white" style="font-family: 'Poppins'; font-size: 7.5vw;">GAS _ STUDIO</p>
+          <p class="mt-3 font-weight-bold text-white animated fadeInDown wow"><span style="font-size: 2vw;">ナレーション費無料</span></p>
           <a href="#contact"
-            class="text-center animated fadeInDown wow btn btn-link font-weight-bold" style="font-size: 15px;">お見積りはコチラ</a>
+            class="mt-5 animated fadeInDown wow btn btn-link font-weight-bold" style="font-size: 1vw;">お見積りはコチラ</a>
         </div>
       </div>
       <!-- <a id="video" class="youtube-bg" data-property="{videoURL:'https://www.youtube.com/watch?v=VBRPJGVU1bo&t=16s',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default'}"></a> -->
@@ -106,9 +103,15 @@
           <div class="col-md-6">
             <div class="about-desc">
               <div class="about-desc-content text-left">
-                <h2>※カッコいいキャッチ</h2>
-                <p class="mt-4 font-weight-light">※サービス概要ゾーン※サービス概要ゾーン※サービス概要ゾーン※サービス概要ゾーン※サービス概要ゾーン※サービス概要ゾーン※サービス概要ゾーン
-                  ※サービス概要ゾーン※サービス概要ゾーン※サービス概要ゾーン※サービス概要ゾーン※サービス概要ゾーン※サービス概要ゾーン
+                <h2>
+                  <span class="d-inline-block" style="font-size: 24px;">低価格でハイクオリティな映像・動画制作</span>
+                </h2>
+                <p class="mt-4 font-weight-light">
+                  ビジネスを行う上で、もはや欠かせない存在となった「動画」。<br>
+                  しかし、ハイクオリティなものを制作しようとすると、コストが高く、
+                  多くの企業がなかなか手が出せない現状があります。<br>
+                  GAS_STUDIOでは、そんなハイクオリティな動画を低コストにて提供いたします。
+                  なんとナレーションは無料！
                 </p>
                 <a href="#work" class="mt-3 mr-2 btn btn-link font-weight-bold">ご依頼はコチラ</a>
                 <a href="#work" class="mt-3 btn btn-link font-weight-bold">サンプルを確認</a>
@@ -134,7 +137,7 @@
               <div class="services-list">
                 <div class="services-list-front services-list-1">
                   <div class="flip-content">
-                    <h5 class="mb-0 font-weight-bold">1.ヒアリング</h5>
+                    <h5 class="mb-0 font-weight-bold">ヒアリング</h5>
                   </div>
                 </div>
                 <div class="services-list-back">
@@ -144,7 +147,7 @@
                     </div>
                     <div class="mt-4">
                       <h5 class="mb-0 font-weight-bold">ヒアリング</h5>
-                      <p class=" mt-3">※説明文章</p>
+                      <p class=" mt-3">「どのような映像か」「どんなときに使用するか」など制作したい映像・動画のイメージをお聞きします。</p>
                     </div>
                   </div>
                 </div>
@@ -156,7 +159,7 @@
               <div class="services-list">
                 <div class="services-list-front services-list-2">
                   <div class="flip-content">
-                    <h5 class="mb-0">※工程</h5>
+                    <h5 class="mb-0 font-weight-bold">企画</h5>
                   </div>
                 </div>
                 <div class="services-list-back">
@@ -165,8 +168,8 @@
                       <i class="fas fa-palette  "></i>
                     </div>
                     <div class="mt-4">
-                      <h5 class="mb-0">※工程</h5>
-                      <p class=" mt-3">※説明</p>
+                      <h5 class="mb-0 font-weight-bold">企画</h5>
+                      <p class=" mt-3">ヒアリングの際、イメージがなければ、イメージを企画させていただきます</p>
                     </div>
                   </div>
                 </div>
@@ -178,17 +181,17 @@
               <div class="services-list">
                 <div class="services-list-front services-list-3">
                   <div class="flip-content">
-                    <h5 class="mb-0">※工程</h5>
+                    <h5 class="mb-0 font-weight-bold">撮影</h5>
                   </div>
                 </div>
                 <div class="services-list-back">
                   <div class="flip-content">
                     <div class="services-list-icon">
-                      <i class="fas fa-compact-disc  "></i>
+                      <i class="fas fa-camera"></i>
                     </div>
                     <div class="mt-4">
-                      <h5 class="mb-0">※工程</h5>
-                      <p class=" mt-3">※説明</p>
+                      <h5 class="mb-0 font-weight-bold">撮影</h5>
+                      <p class=" mt-3">必要な場合には、撮影を行います。別途、ご相談ください。</p>
                     </div>
                   </div>
                 </div>
@@ -200,17 +203,17 @@
               <div class="services-list">
                 <div class="services-list-front services-list-4">
                   <div class="flip-content">
-                    <h5 class="mb-0">※工程</h5>
+                    <h5 class="mb-0 font-weight-bold">仮編集</h5>
                   </div>
                 </div>
                 <div class="services-list-back">
                   <div class="flip-content">
                     <div class="services-list-icon">
-                      <i class="fa fa-puzzle-piece  " aria-hidden="true"></i>
+                      <i class="fas fa-photo-video"></i>
                     </div>
                     <div class="mt-4">
-                      <h5 class="mb-0">※工程</h5>
-                      <p class=" mt-3">※説明</p>
+                      <h5 class="mb-0 font-weight-bold">仮編集</h5>
+                      <p class=" mt-3">撮影した映像や静止画等を組み合わせて仮編集を行います。動画の構成を確認していただきます。</p>
                     </div>
                   </div>
                 </div>
@@ -222,17 +225,17 @@
               <div class="services-list">
                 <div class="services-list-front services-list-5">
                   <div class="flip-content">
-                    <h5 class="mb-0">※工程</h5>
+                    <h5 class="mb-0 font-weight-bold">本編集</h5>
                   </div>
                 </div>
                 <div class="services-list-back">
                   <div class="flip-content">
                     <div class="services-list-icon">
-                      <i class="fa fa-gamepad  " aria-hidden="true"></i>
+                      <i class="fas fa-keyboard"></i>
                     </div>
                     <div class="mt-4">
-                      <h5 class="mb-0">※工程</h5>
-                      <p class=" mt-3">※説明</p>
+                      <h5 class="mb-0 font-weight-bold">本編集</h5>
+                      <p class=" mt-3">仮編集で問題なければ、仮編集の映像をもとに本格的な編集を始めます。</p>
                     </div>
                   </div>
                 </div>
@@ -244,17 +247,17 @@
               <div class="services-list">
                 <div class="services-list-front services-list-6">
                   <div class="flip-content">
-                    <h5 class="mb-0">※工程</h5>
+                    <h5 class="mb-0 font-weight-bold">完成</h5>
                   </div>
                 </div>
                 <div class="services-list-back">
                   <div class="flip-content">
                     <div class="services-list-icon">
-                      <i class="far fa-chart-bar  "></i>
+                      <i class="fas fa-film"></i>
                     </div>
                     <div class="mt-4">
-                      <h5 class="mb-0">※工程</h5>
-                      <p class=" mt-3">※せつめい</p>
+                      <h5 class="mb-0 font-weight-bold">完成</h5>
+                      <p class=" mt-3">修正対応も対応いたします ※別料金</p>
                     </div>
                   </div>
                 </div>
@@ -319,12 +322,12 @@
           <div class="portfolio-item-1 col-sm-6 col-md-4 list-item mb-4 mb-md-5" itemprop="associatedMedia"
             data-groups="all slideshow">
             <div data-toggle="modal" data-target="#portfolio-item-1">
-              <img src="assets/images/p4-4.jpg" itemprop="thumbnail" alt="Image description" />
+              <img src="assets/images/32336-Haifuri-PC.jpg" itemprop="thumbnail" alt="Image description" />
               <h4 class="portfolio-item-title mt-3 mb-2">※タイトル</h4>
             </div>
           </div>
           <div class="modal fade" id="portfolio-item-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-            <div class="modal-dialog">
+            <div class="modal-dialog modal-xl">
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-label="閉じる">
@@ -332,11 +335,13 @@
                   </button>
                 </div>
                 <div class="modal-body py-5">
-                  <iframe width="100%" height="315" src="https://www.youtube.com/embed/VBRPJGVU1bo" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-                  <h3 class="mt-2">※タイトル</h3>
-                  <p class="mt-2">※モーダルのコンテンツ文。</p>
+                  <div class="text-center">
+                    <iframe class="portfolio-video" width="80%" height="436" src="https://www.youtube.com/embed/VBRPJGVU1bo" frameborder="0"
+                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen></iframe>
+                  </div>
+                  <h3 class="text-center mt-2">※タイトル</h3>
+                  <p class="d-inline-block mt-2 mx-5">※モーダルのコンテンツ文。※モーダルのコンテンツ文。※モーダルのコンテンツ文。※モーダルのコンテンツ文。※モーダルのコンテンツ文。※モーダルのコンテンツ文。※モーダルのコンテンツ文。※モーダルのコンテンツ文。</p>
                 </div>
               </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -345,7 +350,7 @@
           <div class="portfolio-item-2 col-sm-6 col-md-4 list-item mb-4 mb-md-5" itemprop="associatedMedia"
             data-groups="all slideshow">
             <div data-toggle="modal" data-target="#portfolio-item-2">
-              <img src="assets/images/p4-4.jpg" itemprop="thumbnail" alt="Image description" />
+              <img src="assets/images/32336-Haifuri-PC.jpg" itemprop="thumbnail" alt="Image description" />
               <h4 class="portfolio-item-title mt-3 mb-2">※タイトル</h4>
             </div>
           </div>
@@ -367,7 +372,7 @@
           <div class="portfolio-item-3 col-sm-6 col-md-4 list-item mb-4 mb-md-5" itemprop="associatedMedia"
             data-groups="all video">
             <div data-toggle="modal" data-target="#portfolio-item-3">
-              <img src="assets/images/p4-4.jpg" itemprop="thumbnail" alt="Image description" />
+              <img src="assets/images/32336-Haifuri-PC.jpg" itemprop="thumbnail" alt="Image description" />
               <h4 class="portfolio-item-title mt-3 mb-2">※タイトル</h4>
             </div>
           </div>
@@ -389,7 +394,7 @@
           <div class="portfolio-item-4 col-sm-6 col-md-4 list-item mb-4 mb-md-5" itemprop="associatedMedia"
             data-groups="all image">
             <div data-toggle="modal" data-target="#portfolio-item-4">
-              <img src="assets/images/p4-4.jpg" itemprop="thumbnail" alt="Image description" />
+              <img src="assets/images/32336-Haifuri-PC.jpg" itemprop="thumbnail" alt="Image description" />
               <h4 class="portfolio-item-title mt-3 mb-2">※タイトル</h4>
             </div>
           </div>
@@ -411,7 +416,7 @@
           <div class="portfolio-item-5 col-sm-6 col-md-4 list-item mb-4 mb-md-5" itemprop="associatedMedia"
             data-groups="all video">
             <div data-toggle="modal" data-target="#portfolio-item-5">
-              <img src="assets/images/p4-4.jpg" itemprop="thumbnail" alt="Image description" />
+              <img src="assets/images/32336-Haifuri-PC.jpg" itemprop="thumbnail" alt="Image description" />
               <h4 class="portfolio-item-title mt-3 mb-2">※タイトル</h4>
             </div>
           </div>
@@ -433,7 +438,7 @@
           <div class="portfolio-item-6 col-sm-6 col-md-4 list-item mb-4 mb-md-5" itemprop="associatedMedia"
             data-groups="all slideshow">
             <div data-toggle="modal" data-target="#portfolio-item-6">
-              <img src="assets/images/p4-4.jpg" itemprop="thumbnail" alt="Image description" />
+              <img src="assets/images/32336-Haifuri-PC.jpg" itemprop="thumbnail" alt="Image description" />
               <h4 class="portfolio-item-title mt-3 mb-2">※タイトル</h4>
             </div>
           </div>
@@ -462,7 +467,7 @@
       <div class="container">
         <div class="section-head">
           <span>say Hello</span>
-          <h2>お問い合わせ</h2>
+          <h2>お問い合わせ・お見積り</h2>
         </div>
 
       </div>
@@ -472,15 +477,20 @@
           <div class="contact-form mt-5">
             <form method="post" action="php/contact.php" id="contactForm" data-toggle="validator">
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                   <div class="form-group mb-3">
                     <input name="name" id="name" type="text" class="form-control b-box" placeholder="お名前 *" required>
                   </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                   <div class="form-group mb-3">
                     <input name="email" id="email" type="email" class="form-control b-box" placeholder="メールアドレス *"
                       required>
+                  </div>
+                </div>
+                <div class="col-lg-4">
+                  <div class="form-group mb-3">
+                    <input name="email" id="company" type="text" class="form-control b-box" placeholder="会社名">
                   </div>
                 </div>
               </div>
@@ -495,7 +505,7 @@
                 <div class="col-lg-12">
                   <div class="form-group mb-3">
                     <textarea name="comments" id="comments" rows="4" class="form-control b-box"
-                      placeholder="本文"></textarea>
+                      placeholder="本文（使用用途・長さ）"></textarea>
                   </div>
                 </div>
               </div>
