--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
       <video class="top-video" src="assets/images/nc219945.mp4" autoplay playsinline muted loop></video>
       <div class="overlay text-center">
         <div class="top-contents">
-          <p class="font-weight-bold text-white animated fadeInDown wow"><span style="font-size: 2.5vw;">差のつく映像制作</span></p>
-          <p class="mt-1 display-2 animated fadeInDown wow font-weight-bold text-white" style="font-family: 'Poppins'; font-size: 7.5vw;">GAS _ STUDIO</p>
-          <p class="mt-3 font-weight-bold text-white animated fadeInDown wow"><span style="font-size: 2vw;">ナレーション費無料</span></p>
+          <p class="font-weight-bold text-white animated fadeInDown wow"><span style="font-size: 3.5vw;">差のつく映像制作</span></p>
+          <p class="mt-1 display-2 animated fadeInDown wow font-weight-bold text-white" style="font-family: 'Poppins'; font-size: 8.5vw;">GAS _ STUDIO</p>
+          <p class="mt-3 font-weight-bold text-white animated fadeInDown wow"><span style="font-size: 3vw;">ナレーション費無料</span></p>
           <a href="#contact"
-            class="mt-5 animated fadeInDown wow btn btn-link font-weight-bold" style="font-size: 1vw;">お見積りはコチラ</a>
+            class="mt-5 animated fadeInDown wow btn btn-link font-weight-bold" style="font-size: 15px;">お見積りはコチラ</a>
         </div>
       </div>
       <!-- <a id="video" class="youtube-bg" data-property="{videoURL:'https://www.youtube.com/watch?v=VBRPJGVU1bo&t=16s',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default'}"></a> -->
@@ -102,18 +102,19 @@
 
           <div class="col-md-6">
             <div class="about-desc">
-              <div class="about-desc-content text-left">
+              <div class="about-desc-content text-center ml-3">
                 <h2>
-                  <span class="d-inline-block" style="font-size: 24px;">低価格でハイクオリティな映像・動画制作</span>
+                  <span class="d-inline-block" style="font-size: 24px;">低価格でハイクオリティな</span>
+                  <span class="d-inline-block" style="font-size: 24px;">映像・動画制作</span>
                 </h2>
-                <p class="mt-4 font-weight-light">
-                  ビジネスを行う上で、もはや欠かせない存在となった「動画」。<br>
+                <p class="mt-4 font-weight-light text-left">
+                  ビジネスを行う上で、もはや欠かせない存在となった「動画」。
                   しかし、ハイクオリティなものを制作しようとすると、コストが高く、
-                  多くの企業がなかなか手が出せない現状があります。<br>
+                  多くの企業がなかなか手が出せない現状があります。
                   GAS_STUDIOでは、そんなハイクオリティな動画を低コストにて提供いたします。
                   なんとナレーションは無料！
                 </p>
-                <a href="#work" class="mt-3 mr-2 btn btn-link font-weight-bold">ご依頼はコチラ</a>
+                <a href="#work" class="mt-3 btn btn-link font-weight-bold">ご依頼はコチラ</a>
                 <a href="#work" class="mt-3 btn btn-link font-weight-bold">サンプルを確認</a>
               </div>
             </div>
