modify top layout

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>映像制作・動画制作なら『GAS STUDIO』</title>
+  <title>映像制作・動画制作なら『GAS _ STUDIO』</title>
   <meta name="description" content="映像制作ならハイクオリティでリーズナブルな『GAS _ STUDIO』にお任せください。" />
   <meta name="keywords" content="動画, 動画制作, 映像, 映像制作, モーショングラフィックス, After Effects, premiere, YouTube, ニコニコ動画, ポートフォリオ" />
   <meta name="author" content="RyosukeFukui" />
